<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BattleshipGame</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="_1_A">1-A</string>
    <string name="_1_B">1-B</string>
    <string name="_1_C">1-C</string>
    <string name="_1_D">1-D</string>
    <string name="_1_E">1-E</string>
    <string name="log">log</string>
    <string name="_2_A">2-A</string>
    <string name="_2_B">2-B</string>
    <string name="_2_C">2-C</string>
    <string name="_2_D">2-D</string>
    <string name="_2_E">2-E</string>
    <string name="_3_A">3-A</string>
    <string name="_3_B">3-B</string>
    <string name="_3_C">3-C</string>
    <string name="_3_D">3-D</string>
    <string name="_3_E">3-E</string>
    <string name="_4_A">4-A</string>
    <string name="_4_B">4-B</string>
    <string name="_4_C">4-C</string>
    <string name="_4_D">4-D</string>
    <string name="_4_E">4-E</string>
    <string name="_5_A">5-A</string>
    <string name="_5_B">5-B</string>
    <string name="_5_C">5-C</string>
    <string name="_5_D">5-D</string>
    <string name="_5_E">5-E</string>
    <string name="start_game">ゲーム開始</string>
    <string name="attack">攻撃</string>
    <string name="move_warship">戦艦移動</string>
    <string name="move_destroyer">駆逐艦移動</string>
    <string name="move_submarine">潜水艦移動</string>

</resources>